--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form action="http://localhost:3000/userform" method="GET">
+    <form action="http://localhost:3000/userform" method="POST">
         <p>
             First Name: <input type="text" name="first_name">
         </p>
